--- a/src/app/pages/users/users-list/users-list.component.html
+++ b/src/app/pages/users/users-list/users-list.component.html
@@ -1,1 +1,31 @@
-<p>users-list works!</p>
+<div class="card w-100 my-5">
+     <div class="card-body">
+        <h1 class="card-title text-center">Lista de Usuarios</h1>
+        <button class="btn btn-success mb-4 float-end">Cadastar Novo</button>
+        <table class="table">
+            <thead>
+                <tr>
+                    <td>id</td>
+                    <td>Nome</td>
+                    <td>Idade</td>
+                    <td>Profissão</td>
+                </tr>
+                <th colspan="2"></th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Anderson</td>
+                    <td>22</td>
+                    <td>Desenvolvedor</td>
+                    <td>
+                        <button class="btn btn-primary">Editar</button>
+                    </td>
+                    <td>
+                        <button class="btn btn-danger">Deletar</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+     </div>
+</div>
