--- a/src/app/pages/users/users-list/users-list.component.html
+++ b/src/app/pages/users/users-list/users-list.component.html
@@ -13,11 +13,12 @@
                 <th colspan="2"></th>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Anderson</td>
-                    <td>22</td>
-                    <td>Desenvolvedor</td>
+                <tr *ngFor="let user of users ">
+                    <td>{{user.id}}</td>
+                    <td>{{user.nome}}</td>
+                    <td>{{user.sobrenome}}</td>
+                    <td>{{user.idade}}</td>
+                    <td>{{user.profissao}}</td>
                     <td>
                         <button class="btn btn-primary">Editar</button>
                     </td>
