--- a/src/app/pages/users/user-form/user-form.component.html
+++ b/src/app/pages/users/user-form/user-form.component.html
@@ -1,31 +1,31 @@
 <div class="card w-100 my-5">
     <div class="card-body">
         <h1 class="card-title text-center">Formúlario de Usuarios</h1>
-        <form>
+        <form [formGroup]="userForm">
             <div class="row my-4">
                 <div class="form-floating w-50">
-                    <input type="text" class="form-control" id="nome" placeholder="Digite seu nome">
+                    <input type="text" class="form-control" formControlName="nome" id="nome" placeholder="Digite seu nome">
                     <label class="mx-1" for="nome">Nome</label>
                 </div>
                 <div class="form-floating w-50">
-                    <input type="text" class="form-control" id="sobrenome" placeholder="Digite seu sobrenome">
+                    <input type="text" class="form-control" formControlName="sobrenome" id="sobrenome" placeholder="Digite seu sobrenome">
                     <label class="mx-1" for="sobrenome">Sobrenome</label>
                 </div>
             </div>
             <div class="row my-4">
                 <div class="form-floating w-50">
-                    <input type="text" class="form-control" id="idade" placeholder="Digite sua idade">
+                    <input type="text" class="form-control" formControlName="idade" id="idade" placeholder="Digite sua idade">
                     <label class="mx-1" for="idade">Idade</label>
                 </div>
                 <div class="form-floating w-50">
-                    <input type="text" class="form-control" id="profissao" placeholder="Digite sua profissão">
+                    <input type="text" class="form-control" formControlName="profissao" id="profissao" placeholder="Digite sua profissão">
                     <label class="mx-1" for="profissao">Profissão</label>
                 </div>
             </div>
             <div class="row my-4">
                 <div class="form-group col-12 mt-4">
                     <button type="button" class="btn btn-outline-danger float-start">Cancelar</button>
-                    <button type="button" class="btn btn-outline-success float-end">Enviar</button>
+                    <button type="button" class="btn btn-outline-success float-end" (click)="creatUser()">Enviar</button>
                 </div>
             </div>
         </form>
