--- a/src/app/pages/users/users-list/users-list.component.html
+++ b/src/app/pages/users/users-list/users-list.component.html
@@ -23,7 +23,7 @@
                         <button class="btn btn-primary">Editar</button>
                     </td>
                     <td>
-                        <button class="btn btn-danger">Deletar</button>
+                        <button class="btn btn-danger" (click)="deleteUser(user.id)" >Deletar</button>
                     </td>
                 </tr>
             </tbody>
