--- a/src/app/pages/users/users-list/users-list.component.html
+++ b/src/app/pages/users/users-list/users-list.component.html
@@ -20,7 +20,7 @@
                     <td>{{user.idade}}</td>
                     <td>{{user.profissao}}</td>
                     <td>
-                        <button class="btn btn-primary">Editar</button>
+                        <button class="btn btn-primary" [routerLink]="['/form', user.id]">Editar</button>
                     </td>
                     <td>
                         <button class="btn btn-danger" (click)="deleteUser(user.id)" >Deletar</button>
