--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,6 +10,9 @@
                 <li class="nav-item active">
                   <a class="nav-link" routerLink="/">Usuarios</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" routerLink="/todo">Lista de Tarefas</a>
+                  </li>
             </ul>
         </div>
     </div>
